@@ -142,19 +142,6 @@ CPPFLAGS+=" $ODE_PRECISION"
 AC_SUBST(ODE_PRECISION)
 
 
-AC_MSG_CHECKING(if gyroscopic term should be used)
-AC_ARG_ENABLE(gyroscopic,
-        AS_HELP_STRING([--disable-gyroscopic],
-            [Configure ODE to work without gyroscopic term (may improve stability)]
-        ),
-        gyroscopic=$enableval,gyroscopic=yes)
-AC_MSG_RESULT($gyroscopic)
-if test x"$gyroscopic" = xyes
-then
-    AC_DEFINE(dGYROSCOPIC,1,[Use gyroscopic terms])
-fi
-
-
 AC_ARG_WITH([drawstuff],AS_HELP_STRING([--with-drawstuff=X11|Win32|OSX|none],[force a particular drawstuff implementation or disable it.]),
         [drawstuff=$withval],[drawstuff=])
 
@@ -451,7 +438,6 @@ echo "  Use drawstuff:           $drawstuff"
 echo "  Demos enabled:           $enable_demos"
 echo "  Use OPCODE:              $opcode"
 echo "  Use GIMPACT:             $gimpact"
-echo "  Use gyroscopic term:     $gyroscopic"
 echo "  Is target a Pentium:     $pentium"
 echo "  Is target x86-64:        $cpu64"
 echo "  Use new opcode trimesh collider: $new_trimesh"
